added customvalue mapping (wip)
