# webserver/webserver/swagger.yaml
@@ -14,6 +14,71 @@ paths:
         200:
           description: OK
 
+  /customfieldvalue-config:
+    get:
+      summary:
+        "Returns an html page that lets the user set up the JIRA customfield value => CurrentTime subtask mapping"
+      produces:
+        - text/html
+      responses:
+        200:
+          description: OK
+
+    post:
+      summary:
+        Add or deletes a JIRA customfield value => CurrentTime subtask mapping. Returns the resulting list of mappings
+        as html.
+      produces:
+        - text/html
+      responses:
+        200:
+          description: OK
+
+  /currenttime-projects:
+    get:
+      summary:
+        Returns the a list of all the currenttime projects
+      produces:
+        - application/json
+      responses:
+        200:
+          description: OK
+
+  /currenttime-tasks/{project_id}:
+    get:
+      summary:
+        Returns the tasks for the specified project
+      produces:
+        - application/json
+      parameters:
+        - name: project_id
+          in: path
+          description: ID of the project
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: OK
+
+  /currenttime-subtasks/{task_id}:
+    get:
+      summary:
+        Returns the subtasks for the specified task
+      produces:
+        - application/json
+      parameters:
+        - name: task_id
+          in: path
+          description: ID of the task
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: OK
+
+
   /compare-totals.csv:
     get:
       summary:
